[package]
name = "drill-redis"
version = "0.9.0"
authors = ["Akira Kawahara"]
edition = "2021"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "dredis"
path = "src/bin/server.rs"


[[bin]]
name = "dredis-cli"
path = "src/bin/client.rs"


[dependencies]
async-std = { version = "1.10.0", features = ["attributes", "unstable"] }
async-trait = "0.1.52"
futures = "0.3.21"
once_cell = "1.10.0"
signal-hook = "0.3.10"
signal-hook-async-std = "0.2.1"
